--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ai-resume-builder</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='none'><defs><linearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' stop-color='%233b82f6'/><stop offset='100%25' stop-color='%239333ea'/></linearGradient></defs><path d='M50 10L90 30V70L50 90L10 70V30L50 10Z' stroke='url(%23g)' stroke-width='8' stroke-linecap='round' stroke-linejoin='round'/><path d='M50 25V75' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/><path d='M10 30L50 50L90 30' stroke='url(%23g)' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'/><circle cx='50' cy='50' r='8' fill='white'/></svg>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Resume Maker</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
